Correctifs bugs d'affichage (menu liens étudiant + z-index boutons + largeur liens menu mobile) + suppression Partie Venir à l'IUT

--- a/styles/classic.css
+++ b/styles/classic.css
@@ -13,7 +13,7 @@
 }
 
 #studentsLinks {
-    margin: 0;
+    margin: 0 15px 0 5px;
 }
 
 #hamburgerButton {
