--- a/styles/general.css
+++ b/styles/general.css
@@ -39,7 +39,8 @@ a[target="_blank"]:after {
     background-color: black;
     position: sticky;
     top: 0;
-    box-shadow: 0px 0px 5px #333333;
+    box-shadow: 0 0 5px #333333;
+    z-index: 1000;
 }
 
 #logoIUT {
@@ -87,6 +88,7 @@ a[target="_blank"]:after {
     display: flex;
     flex-direction: column;
     align-self: flex-start;
+    width: 120px;
 }
 
 #studentsLinks > ul {
@@ -94,7 +96,9 @@ a[target="_blank"]:after {
     display: none;
     padding: 0;
     margin: 0 5px 0 0;
-    top: 28.4px;
+    top: 28px;
+    width: 120px;
+    max-width: inherit;
 }
 
 #studentsLinks > ul > li {
@@ -114,6 +118,8 @@ a[target="_blank"]:after {
     background-color: #4D4D4D;
     color: white;
     cursor: pointer;
+    font-size: 15px;
+    height: 18px;
 }
 
 #studentsLinks a {
