--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -12,7 +12,6 @@
 
 #studentsLinks {
     margin: 0 auto;
-    z-index: 1000;
 }
 
 #hamburgerButton {
@@ -127,6 +126,7 @@
     text-decoration: none;
     text-align: center;
     color: white;
+    width: 100%;
 }
 
 
@@ -149,7 +149,6 @@
         display: none;
     }
 }
-
 
 
 /* Pied de page */
